# network_electronics

./: .env.example  README.md  pyproject.toml
config/: settings.py  urls.py
network/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
network/migrations/: 0001_initial.py
users/: models.py  permissions.py  urls.py  views.py
users/migrations/: 0001_initial.py
